--- a/index.html
+++ b/index.html
@@ -6,16 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elden Ring FanPage</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/harry.css">
 </head>
 
 <body>
     <img src="images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
-    <div class="padre">
-        <header class="navegacion">
+    <div class="padre container-fluid">
+        <header class="navegacion row">
             <!-- BARRA DE NAVEGACION -->
-            <nav>
+            <nav class="navbar navbar-expand-lg navegacion row">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="mb-2 mb-lg-0 navBar">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="pages/items.html" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    Items
+                                </a>
+                                <ul class="dropdown-menu navBar" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="pages/items.html#armas">Armas</a></li>
+                                    <li><a class="dropdown-item" href="pages/items.html#armors">Armaduras y Sets</a></li>
+                                    <li><a class="dropdown-item" href="pages/items.html#arcos">Arcos</a></li>
+                                    <li><a class="dropdown-item" href="pages/items.html#armases">Armas especiales</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="pages/lore.html">Lore(Historia)</a></li>
+                            <li class="nav-item"><a class="nav-link" href="pages/fotos.html">Fotos</a></li>
+                            <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contácto</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <!-- <nav class="row">
                 <ol class="navBar">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="pages/items.html">Items</a>
@@ -30,14 +61,14 @@
                     <li><a href="pages/fotos.html">Fotos</a></li>
                     <li><a href="pages/contacto.html">Contácto</a></li>
                 </ol>
-            </nav>
+            </nav> -->
         </header>
         <!-- ENCABEZADO -->
-        <div class="encabezado">
+        <div class="encabezado row">
             <h1 class="textoDorado textoGrande textoClasico">Elden Ring intento de Wiki</h1>
         </div>
         <!-- PARRAFO -->
-        <div class="parrafo1">
+        <div class="parrafo1 row">
             <p class="textoSilver textoGrande textoClasico">El mundo de Elden Ring está habitado por una serie de seres
                 bendecidos por los semidioses. Aunque este don puede llegar a perderse como ocurre con el personaje que
                 manejará
@@ -48,29 +79,30 @@
         </div>
 
         <!--TEXTO IMAGEN1 -->
-        <div class="divModel seccion1">
-            <div>
+        <div class="row divModel seccion1">
+            <div class="row">
                 <h2 class="textoDorado textoDorado--align">Sumergite en el mundo de las Tierras Intermedias</h2>
             </div>
-            <div class="divModelImg">
+            <div class="row divModelImg">
                 <img src="images/tierras.jpeg" alt="">
             </div>
             <div>
-                <p class="textoSilver textoSilver--align">Recorré el extenso mundo creado por Hidetaka Miyazaki y
+                <p class="row textoSilver textoSilver--align">Recorré el extenso mundo creado por Hidetaka Miyazaki y
                     George
                     R R Martin y enfrentate a las mazmorras y laberintos escondidos por todo el mapa al lado de tu
                     corcel Torrente </p>
             </div>
         </div>
         <!--TEXTO IMAGEN2 -->
-        <div class="divModel seccion2">
-            <div>
-                <h2 class="textoDorado textoDorado--align">Reunete con tus NPCs aliados en el Hub Central (Roundtable Hold)</h2>
+        <div class="row divModel seccion2">
+            <div class="row">
+                <h2 class="textoDorado textoDorado--align">Reunete con tus NPCs aliados en el Hub Central (Roundtable
+                    Hold)</h2>
             </div>
-            <div class="divModelImg">
+            <div class="row divModelImg">
                 <img src="images/hub.jpeg" alt="">
             </div>
-            <div>
+            <div class="row">
                 <p class="textoSilver textoSilver--align">Llegado el momento vas a poder reunirte junto a todos los
                     NPCs
                     que
@@ -79,28 +111,60 @@
                 </p>
             </div>
         </div>
-
+        <div class="carousel1 car row">
+            <div id="carouselExampleIndicators" class="carousel slide row" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/carrousel1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/carrousel2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/carrousel3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
         <!-- VIDEO -->
-        <div class="textoDorado textoClasico videoPrincipal">
-            <div>
+        <div class="textoDorado textoClasico videoPrincipal row">
+            <div class="row">
                 <h2>Video</h2>
             </div>
-            <div>
+            <div class="row">
                 <p class="video__parrafo textoDorado">Video trailer oficial</p>
             </div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/CptaXqVY6-E"
+            <iframe class="row" width="560" height="315" src="https://www.youtube.com/embed/CptaXqVY6-E"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
-        <div class="pie">
+        <div class="pie row form1">
             <footer class="footer textoDorado">
                 <h4>Todos los derechos reservados</h4>
                 Mariano
             </footer>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
