--- a/pages/items.html
+++ b/pages/items.html
@@ -1,70 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elden Ring FanPage Items</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/harry.css">
-    <body>
-        <img src="../images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
-        <header>
-            <nav>
-                <ol class="navBar">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="items.html">Items</a> 
-                        <ul class="navBar">
-                            <li> <a href="#armas">Armas</a></li>
-                            <li> <a href="#armors">Armaduras y Sets</a></li>
-                            <li> <a href="#arcos">Arcos</a></li>
-                            <li> <a href="#armases">Armas especiales</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="lore.html">Lore(Historia)</a></li>
-                    <li><a href="fotos.html">Fotos</a></li>
-                    <li><a href="contacto.html">Contácto</a></li>
-                </ol>
-            </nav>
-       </header>
-        <h1>Selecciona un Item</h1>
-        <div class="divModel">
-            <h2 id="armas">Armas</h2>
-            <img src="../images/armas.png" alt="">
-                <h3>Selecciona un arma</h3>
-                <table class="tableOpacity" border="1" cellpadding="5" cellspacing="5">
-                    <tr>
-                        <th>Arma</th>
-                        <th>Daño</th>
-                        <th>Costo</th>
-                     </tr>
-                    <tr>
-                        <td>Espadon</td>
-                        <td>500</td>
-                        <td>18000</td>
-                    </tr>
-                    <tr
-                        ><td> Hacha </td>
-                        <td> 520 </td>
-                        <td>19500</td>
-                    </tr>
-                </table>
-         
-            <h2 id="armors">Armaduras y Sets</h2>
-           
-                <img src="../images/armadura.png" alt="">
-                <h3>Selecciona una Armadura o un Set</h3>
-            <h2 id="arcos">Arcos</h2> 
-                <img src="../images/arco.png" alt="">
-                <h3>Selecciona un Arco</h3>
-            <h2 id="armases">Armas Especiales</h2>
-                <img src="../images/armases.png" alt="">
-                <h3>Selecciona un arma espcial</h3>
-            </div>
-        <div class="divModelFooter">       
-            <footer class="footer textoDorado">
-                <h4>Todos los derechos reservados</h4>
-                                 Mariano
-            </footer>   
-        </div>     
 
-    </body>
+<body>
+    <img src="../images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
+    <header>
+        <nav class="navbar navbar-expand-lg navegacion row">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="mb-2 mb-lg-0 navBar">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="items.html" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Items
+                            </a>
+                            <ul class="dropdown-menu navBar" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="items.html#armas">Armas</a></li>
+                                <li><a class="dropdown-item" href="items.html#armors">Armaduras y Sets</a></li>
+                                <li><a class="dropdown-item" href="items.html#arcos">Arcos</a></li>
+                                <li><a class="dropdown-item" href="items.html#armases">Armas especiales</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="lore.html">Lore(Historia)</a></li>
+                        <li class="nav-item"><a class="nav-link" href="fotos.html">Fotos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contácto</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- <nav>
+            <ol class="navBar">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="items.html">Items</a>
+                    <ul class="navBar">
+                        <li> <a href="#armas">Armas</a></li>
+                        <li> <a href="#armors">Armaduras y Sets</a></li>
+                        <li> <a href="#arcos">Arcos</a></li>
+                        <li> <a href="#armases">Armas especiales</a></li>
+                    </ul>
+                </li>
+                <li><a href="lore.html">Lore(Historia)</a></li>
+                <li><a href="fotos.html">Fotos</a></li>
+                <li><a href="contacto.html">Contácto</a></li>
+            </ol>
+        </nav> -->
+    </header>
+    <h1>Selecciona un Item</h1>
+    <div class="divModel">
+        <h2 id="armas">Armas</h2>
+        <img src="../images/armas.png" alt="">
+        <h3>Selecciona un arma</h3>
+        <table class="tableOpacity" border="1" cellpadding="5" cellspacing="5">
+            <tr>
+                <th>Arma</th>
+                <th>Daño</th>
+                <th>Costo</th>
+            </tr>
+            <tr>
+                <td>Espadon</td>
+                <td>500</td>
+                <td>18000</td>
+            </tr>
+            <tr>
+                <td> Hacha </td>
+                <td> 520 </td>
+                <td>19500</td>
+            </tr>
+        </table>
+
+        <h2 id="armors">Armaduras y Sets</h2>
+
+        <img src="../images/armadura.png" alt="">
+        <h3>Selecciona una Armadura o un Set</h3>
+        <h2 id="arcos">Arcos</h2>
+        <img src="../images/arco.png" alt="">
+        <h3>Selecciona un Arco</h3>
+        <h2 id="armases">Armas Especiales</h2>
+        <img src="../images/armases.png" alt="">
+        <h3>Selecciona un arma espcial</h3>
+    </div>
+    <div class="pie row form1">
+        <footer class="footer textoDorado">
+            <h4>Todos los derechos reservados</h4>
+            Mariano
+        </footer>
+    </div>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+
+</body>
