--- a/pages/lore.html
+++ b/pages/lore.html
@@ -1,40 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elden Ring FanPage Lore</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/harry.css">
 </head>
+
 <body>
     <img src="../images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
     <header>
-     <nav>
-         <ol class="navBar">
-             <li><a href="../index.html">Home</a></li>
-             <li><a href="items.html">Items</a> 
-                 <ul class="navBar">
-                     <li> <a href="items.html#armas">Armas</a></li>
-                     <li> <a href="items.html#armors">Armaduras y Sets</a></li>
-                     <li> <a href="items.html#arcos">Arcos</a></li>
-                     <li> <a href="items.html#armases">Armas especiales</a></li>
-                 </ul>
-             </li>
-             <li><a href="lore.html">Lore(Historia)</a></li>
-             <li><a href="fotos.html">Fotos</a></li>
-             <li><a href="contacto.html">Contácto</a></li>
-         </ol>
-     </nav>
+        <nav class="navbar navbar-expand-lg navegacion row">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="mb-2 mb-lg-0 navBar">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="items.html" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Items
+                            </a>
+                            <ul class="dropdown-menu navBar" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="items.html#armas">Armas</a></li>
+                                <li><a class="dropdown-item" href="items.html#armors">Armaduras y Sets</a></li>
+                                <li><a class="dropdown-item" href="items.html#arcos">Arcos</a></li>
+                                <li><a class="dropdown-item" href="items.html#armases">Armas especiales</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="lore.html">Lore(Historia)</a></li>
+                        <li class="nav-item"><a class="nav-link" href="fotos.html">Fotos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contácto</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- <nav>
+            <ol class="navBar">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="items.html">Items</a>
+                    <ul class="navBar">
+                        <li> <a href="items.html#armas">Armas</a></li>
+                        <li> <a href="items.html#armors">Armaduras y Sets</a></li>
+                        <li> <a href="items.html#arcos">Arcos</a></li>
+                        <li> <a href="items.html#armases">Armas especiales</a></li>
+                    </ul>
+                </li>
+                <li><a href="lore.html">Lore(Historia)</a></li>
+                <li><a href="fotos.html">Fotos</a></li>
+                <li><a href="contacto.html">Contácto</a></li>
+            </ol>
+        </nav> -->
     </header>
     <h1 class="textoClasico textoDorado textoGrande">Historia principal</h1>
-        <p class="textoSilver textoSilver--align textoMediano">Los Sinluz fueron exiliados de las Tierras Intermedias, y tu propio personaje resulta ser un descendiente de aquellos que cayeron en desgracia en el pasado. A pesar de estos problemas, todo estaba relativamente «bien» en las Tierras Intermedias. Sin embargo, el Anillo de Elden se hizo añicos y un puñado de semidioses entraron en guerra entre sí en un conflicto llamado la Guerra de la Destrucción, todos buscando convertirse en el nuevo Señor del anillo de Elden.
+    <p class="textoSilver textoSilver--align textoMediano">Los Sinluz fueron exiliados de las Tierras Intermedias, y tu
+        propio personaje resulta ser un descendiente de aquellos que cayeron en desgracia en el pasado. A pesar de estos
+        problemas, todo estaba relativamente «bien» en las Tierras Intermedias. Sin embargo, el Anillo de Elden se hizo
+        añicos y un puñado de semidioses entraron en guerra entre sí en un conflicto llamado la Guerra de la
+        Destrucción, todos buscando convertirse en el nuevo Señor del anillo de Elden.
 
-            Cuando esto ocurrió, según cuenta la historia de Elden Ring, la «guía de la gracia» se apareció a los Sinluz exiliados, que no pudieron morir, invitándoles a volver a las Tierras Intermedias para trabajar y eventualmente para convertirse en el Señor de los Elden. Miyazaki señala que lo que realmente sucede cuando se logra esto es algo que tendrás que ver por ti mismo en el juego. El comienzo de Elden Ring marca la primera parada en el viaje de tu personaje Sinluz para convertirse en el señor del Anillo de Elden.</p>
-|   <div class="divModelFooter">
-        <footer class="footer textoDorado">
-             <h4>Todos los derechos reservados</h4>
-                  Mariano
-        </footer>    
-    </div>
+        Cuando esto ocurrió, según cuenta la historia de Elden Ring, la «guía de la gracia» se apareció a los Sinluz
+        exiliados, que no pudieron morir, invitándoles a volver a las Tierras Intermedias para trabajar y eventualmente
+        para convertirse en el Señor de los Elden. Miyazaki señala que lo que realmente sucede cuando se logra esto es
+        algo que tendrás que ver por ti mismo en el juego. El comienzo de Elden Ring marca la primera parada en el viaje
+        de tu personaje Sinluz para convertirse en el señor del Anillo de Elden.</p>
+        <div class="pie row form1">
+            <footer class="footer textoDorado">
+                <h4>Todos los derechos reservados</h4>
+                Mariano
+            </footer>
+        </div>
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
