cambios en css y pruebas de bootstrap

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <header class="navegacion row">
             <!-- BARRA DE NAVEGACION -->
             <nav class="navbar navbar-expand-lg navegacion row">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <div class="container-fluid row">
+                    <button class="navbar-toggler row" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="mb-2 mb-lg-0 navBar">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 navBar">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
@@ -46,22 +46,7 @@
                     </div>
                 </div>
             </nav>
-            <!-- <nav class="row">
-                <ol class="navBar">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="pages/items.html">Items</a>
-                        <ul class="navBar">
-                            <li> <a href="pages/items.html#armas">Armas</a></li>
-                            <li> <a href="pages/items.html#armors">Armaduras y Sets</a></li>
-                            <li> <a href="pages/items.html#arcos">Arcos</a></li>
-                            <li> <a href="pages/items.html#armases">Armas especiales</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="pages/lore.html">Lore(Historia)</a></li>
-                    <li><a href="pages/fotos.html">Fotos</a></li>
-                    <li><a href="pages/contacto.html">Contácto</a></li>
-                </ol>
-            </nav> -->
+
         </header>
         <!-- ENCABEZADO -->
         <div class="encabezado row">
