--- a/pages/lore.html
+++ b/pages/lore.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elden Ring FanPage Lore</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/harry.css">
+    <!-- <link rel="stylesheet" href="../css/harry.css"> -->
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
