se agregó SASS2 y SEO al proyecto

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En este sitio vas a encontrar un mini guia para el Elden Ring">
+    <meta name="keywords" content="elden, ring, Elden Ring, RPG, Elden Bling, guias, jefes">
     <title>Elden Ring FanPage</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/harry.css">
