--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elden Ring FanPage Contacto</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/harry.css">
+    <!-- <link rel="stylesheet" href="../css/harry.css"> -->
+    <link rel="stylesheet" href="../css/styles.css">
 
 <body>
     <img src="../images/fondo2.jpg" alt="" media="(min-width: 1000px)" class="imgBg">
@@ -140,10 +141,10 @@
                         <textarea class="form-control" name="mensaje" placeholder="Deje su mensaje aquí"></textarea>
                     </div>
                     <div class="divModelFormBtn">
-                        <input class="btn btn-primary" type="submit" value="Enviar  ">
+                        <input class="btn btn--enviar" type="submit" value="Enviar  ">
                     </div>
                     <div class="divModelFormBtn">
-                        <input class="btn btn-primary" type="reset" value="Limpiar">
+                        <input class="btn btn--limpiar" type="reset" value="Limpiar">
                     </div>
                 </fieldset>
             </form>
