se agregaron los scss de fotos, items e index, se cambio el contenido del html items y se le dio nuevo estilo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="elden, ring, Elden Ring, RPG, Elden Bling, guias, jefes">
     <title>Elden Ring FanPage</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/harry.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -110,13 +110,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/carrousel1.jpg" class="d-block w-100" alt="...">
+                        <img src="images/carrousel1.jpg" class="d-block w-100" alt="imagen de muestra">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/carrousel2.jpg" class="d-block w-100" alt="...">
+                        <img src="images/carrousel2.jpg" class="d-block w-100" alt="imagen de muestra2">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/carrousel3.jpg" class="d-block w-100" alt="...">
+                        <img src="images/carrousel3.jpg" class="d-block w-100" alt="imagen de muestra3">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -137,12 +137,14 @@
                 <h2>Video</h2>
             </div>
             <div class="row">
-                <p class="video__parrafo textoDorado">Video trailer oficial</p>
+                <p class="videoPortada textoDorado">Video trailer oficial</p>
             </div>
-            <iframe class="row" width="560" height="315" src="https://www.youtube.com/embed/CptaXqVY6-E"
+            <div class="row">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/CptaXqVY6-E"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
+            </div>
         </div>
         <div class="pie row form1">
             <footer class="footer textoDorado">
