--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -125,9 +125,6 @@
                             Otro
                         </label>
                     </div>
-                    <!-- <input class="textoSilverContacto" type="radio" name="sexo"> Masculino
-                    <input class="textoSilverContacto" type="radio" name="sexo"> Femenino
-                    <input class="textoSilverContacto" type="radio" name="sexo"> Otro -->
                     <div>
                         <label class="textoSilverContacto" for="socio">Socio</label>
                     </div>
@@ -150,9 +147,9 @@
             </form>
         </div>
         <div class="pie row form1">
-            <footer class="footer textoDorado">
+            <footer class="footer textoDorado row">
                 <h4>Todos los derechos reservados</h4>
-                Mariano
+                <p class="text-center">Mariano</p>
             </footer>
         </div>
     </div>
