--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -9,7 +9,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/harry.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
@@ -47,22 +47,6 @@
                     </div>
                 </div>
             </nav>
-            <!-- <nav>
-                <ol class="navBar">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="items.html">Items</a>
-                        <ul class="navBar">
-                            <li> <a href="items.html#armas">Armas</a></li>
-                            <li> <a href="items.html#armors">Armaduras y Sets</a></li>
-                            <li> <a href="items.html#arcos">Arcos</a></li>
-                            <li> <a href="items.html#armases">Armas especiales</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="lore.html">Lore(Historia)</a></li>
-                    <li><a href="fotos.html">Fotos</a></li>
-                    <li><a href="contacto.html">Contácto</a></li>
-                </ol>
-            </nav> -->
         </header>
         <div class="encabezadoF1 row">
             <h1 class="textoClasico textoDorado textoGrande animate__shakeX">FOTOS</h1>
@@ -167,7 +151,7 @@
         <div class="pie row form1">
             <footer class="footer textoDorado">
                 <h4>Todos los derechos reservados</h4>
-                Mariano
+                <p class="text-center">Mariano</p>
             </footer>
         </div>
     </div>
